Fix spacing

--- a/01-Class-Content/04-Web-APIs-dev/01-Activities/12-Stu_Click-Event/Solved/assets/css/style.css
+++ b/01-Class-Content/04-Web-APIs-dev/01-Activities/12-Stu_Click-Event/Solved/assets/css/style.css
@@ -27,6 +27,10 @@ button {
   background-color: #f0ead6;
 }
 
+.wrapper {
+  padding-top: 20px;
+}
+
 .card-contents {
   padding: 5px 5px 10px 5px;
 }
