--- a/01-Class-Content/04-Web-APIs-dev/01-Activities/13-Ins_Preventing-Default/assets/css/style.css
+++ b/01-Class-Content/04-Web-APIs-dev/01-Activities/13-Ins_Preventing-Default/assets/css/style.css
@@ -14,6 +14,10 @@ input {
   background-color: #f7f7f7;
   }
 
+.wrapper {
+  padding-top: 20px;
+}
+
 .container {
     display: block;
     margin: auto;
